exercices/nginx-istio/deployment-nginx-old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-old-deployment
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
        version: "1"
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          readinessProbe:
            exec:
              command:
                - cat
                - /usr/share/nginx/html/index.html
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: my-secret-page-volume
              mountPath: "/usr/share/nginx/html/secret/"
              readOnly: true
          #securityContext:
          #  privileged: true
      serviceAccountName: nginx-sa
      volumes:
        - name: my-secret-page-volume
          secret:
            secretName: my-secret-html
