exercices/nginx-istio/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-port
      protocol: TCP
      port: 443
      targetPort: 443
