exercices/nginx-istio/gateway-mygateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-nginx-gateway
  namespace: nginx
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: my-http-port
      protocol: HTTP
    hosts:
    - my-nginx-gateway.apps-crc.testing
